k8s/base/grpc-quirks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-quirks-deployment
  labels:
    app: grpc-quirks
spec:
  replicas: 1
  strategy:
    # Single node at its pod cap: a surge pod can't be scheduled, so replace
    # the old pod before starting the new one on redeploy.
    type: Recreate
  selector:
    matchLabels:
      app: grpc-quirks
  template:
    metadata:
      labels:
        app: grpc-quirks
    spec:
      containers:
      - name: grpc-quirks
        image: kajatools/website-quirks:latest
        imagePullPolicy: Always
        command: ["./grpc-server"]
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-quirks-service
spec:
  selector:
    app: grpc-quirks
  ports:
    - port: 80
      targetPort: 50053
  type: ClusterIP
