k8s/base/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: kajatools/website-users:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: workspace-volume
          mountPath: /workspace
        ports:
        - containerPort: 41521
      volumes:
      - name: workspace-volume
        persistentVolumeClaim:
          claimName: workspace-claim
  strategy:
    # Pebble DB only works with one pod accessible the files at a time
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - port: 80
      targetPort: 41521
  type: ClusterIP
