k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - kaja.tools
    secretName: tls-secret
  rules:
  - host: kaja.tools
    http:
      paths:
      - path: /demo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kaja-service
            port:
              number: 80
      - path: /twirp-quirks
        pathType: Prefix
        backend:
          service:
            name: twirp-quirks-service
            port:
              number: 80
      - path: /theatre
        pathType: Prefix
        backend:
          service:
            name: theatre-service
            port:
              number: 80
      - path: /boxoffice
        pathType: Prefix
        backend:
          service:
            name: boxoffice-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
